ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
spec:
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
